--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     implementation "io.ktor:ktor-server-host-common:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
+
+task stage {
+    dependsOn installDist
+}
 compileKotlin {
     kotlinOptions {
         languageVersion = "1.3"
